--- a/Client/package.json
+++ b/Client/package.json
@@ -12,11 +12,13 @@
   "dependencies": {
     "axios": "^1.6.7",
     "framer-motion": "^11.0.6",
+    "modules": "^0.4.0",
     "moment": "^2.30.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
-    "react-router-dom": "^6.22.1"
+    "react-router-dom": "^6.22.1",
+    "swiper": "^11.1.4"
   },
   "devDependencies": {
     "@types/react": "^18.2.56",
